--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ОсОО «Микрокредитная компания «Келечек»»"
     />
+    <meta name="author" content="Bayel Osorov" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="keyword"
+      content="Cash2u,Микрокредитная компания «Келечек,беспроцентная рассрочка,рассрочка,Бишкек рассрочка,беспроцентный кредит"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Cash2u" />
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-NL9GG8M"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-31LCYH8R5G"
+    ></script>
 
-    <title>React App</title>
+    <!-- Global site tag (gtag.js) - Google Ads: 10851252054 -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-10851252054"
+    ></script>
+
+    <title>Cash2u</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
