--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
     />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Cash2u" />
-    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-NL9GG8M"></script>
+    <script
+      async
+      src="https://www.googleoptimize.com/optimize.js?id=OPT-NL9GG8M"
+    ></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
